#40 Fix: 배우검색api builder, converter사용하도록 변경